# NovaSDR

./: README.md  compile.sh
certs/: Readme.md
config/: config.json
crates/novasdr-core/: Cargo.toml
crates/novasdr-core/src/: config.rs
crates/novasdr-core/tests/: config.rs  json_config.rs  runtime.rs  runtime_defaults.rs
crates/novasdr-server/: Cargo.toml
crates/novasdr-server/src/: app.rs  benchmark.rs  cli.rs  dsp_runner.rs  input.rs  main.rs  registration.rs  setup.rs  state.rs
crates/novasdr-server/src/input/: soapysdr.rs
